--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </h1>
                     <hr>
                 </header>
-                <div id="divConteudo" class="fecha">
+                <div class="divConteudo">
                     <section>
                         <header>
                             <h2>Gestão</h2>
@@ -86,7 +86,9 @@
                             <li>Visual Basic 6.0/5.0/4.0, Crystal Reports, Source Safe, T-SQL</li>
                             <li>SubVersion, ErWin 4</li>
                         </ol>
-                        <h2>Banco de Dados</h2>
+                        <header>
+                            <h2>Banco de Dados</h2>
+                        </header>
                         <ol>
                             <li>Oracle 10g (Modelagem, Triggers, Views, Packages)</li>
                             <li>SQL Server 2005 (Modelagem, Triggers, Views, Stored Procedures)</li>
@@ -102,7 +104,7 @@
                     </h1>
                     <hr>
                 </header>
-                <div id="divConteudo">
+                <div class="divConteudo">
                     <section>
                         <header>
                             <h2>Analista Oracle Sênior</h2>
@@ -210,7 +212,7 @@
                     </h1>
                     <hr>
                 </header>
-                <div id="divConteudo">
+                <div class="divConteudo">
                     <section>
                         <header>
                             <h2>Escolaridade</h2>
@@ -245,7 +247,7 @@
                     </h1>
                     <hr>
                 </header>
-                <div id="divConteudo">
+                <div class="divConteudo">
                     <section>
                         <ol>
                             <li>
