--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                             <h2>Gestão</h2>
                         </header>
                         <ol>
-                            <li>Análise de processos, negócios e sistemas corporativos, realizando atividades como: entrevista
-                                com usuários; mapeamento de processos; análise de requisitos; modelagem funcional e técnica;
+                            <li>Análise de processos, negócios e sistemas corporativos, realizando atividades como:
+                                entrevista
+                                com usuários; mapeamento de processos; análise de requisitos; modelagem funcional e
+                                técnica;
                                 definição de escopo e aplicações.
                             </li>
                             <li>Atuação como gestor de projetos de desenvolvimento de sistemas.</li>
@@ -117,14 +119,18 @@
                         </header>
                         <ol>
                             <li>
-                                <i>Modelagem, Análise, desenvolvimento, homologação e implantação de telas, relatórios e
-                                    programas Oracle, análise de negócio e requisitos, utilização de metodologia de desenvolvimento
+                                <i>Modelagem, Análise, desenvolvimento, homologação e implantação de telas, relatórios
+                                    e
+                                    programas Oracle, análise de negócio e requisitos, utilização de metodologia de
+                                    desenvolvimento
                                     interna.
                                 </i>
                             </li>
-                            <li>ERP Exportação para utilização em 5 países, com módulos: comercial, logística, shipping,
+                            <li>ERP Exportação para utilização em 5 países, com módulos: comercial, logística,
+                                shipping,
                                 planejamento, faturamento e documentação.</li>
-                            <li>Plataforma: Unix AIX/Banco Oracle 10G, Oracle Forms e Reports 6i / PL-SQL, Designer, PL/SQL
+                            <li>Plataforma: Unix AIX/Banco Oracle 10G, Oracle Forms e Reports 6i / PL-SQL, Designer,
+                                PL/SQL
                                 Developer.
                             </li>
                         </ol>
@@ -139,23 +145,32 @@
                         </header>
                         <ol>
                             <li>
-                                <i>Modelagem, desenvolvimento, homologação e implantação de telas, relatórios e programas
-                                    Oracle, análise de negócio e requisitos, definição de atividades e prazos, utilizando
-                                    metodologia de desenvolvimento interna, solução de chamados/incidentes, implantação e
+                                <i>Modelagem, desenvolvimento, homologação e implantação de telas, relatórios e
+                                    programas
+                                    Oracle, análise de negócio e requisitos, definição de atividades e prazos,
+                                    utilizando
+                                    metodologia de desenvolvimento interna, solução de chamados/incidentes, implantação
+                                    e
                                     gerência de mudanças (ITIL).
                                 </i>
                             </li>
-                            <li>Desenvolvimento Fidelização de clientes através de geração de pontuação dos gastos no cartão
+                            <li>Desenvolvimento Fidelização de clientes através de geração de pontuação dos gastos no
+                                cartão
                                 bandeirado. Modelagem, regra negócio em PL/SQL e exposto WS-SOAP no OSB.</li>
-                            <li>Desenvolvimento Processamento Cartão Bandeirado Mastercard Pernambucanas (Orbitall/Conductor).
+                            <li>Desenvolvimento Processamento Cartão Bandeirado Mastercard Pernambucanas
+                                (Orbitall/Conductor).
                                 Developer Oracle Completo.
                             </li>
-                            <li>Desenvolvimento Serviços on-line (Voucher, Desbloqueio, Autorização ISO8583) para as lojas
+                            <li>Desenvolvimento Serviços on-line (Voucher, Desbloqueio, Autorização ISO8583) para as
+                                lojas
                                 e escritório. Modelagem, Regra de Negócio em PL/SQL, consumo WS-SOAP e concentrador.</li>
-                            <li>Homologação e Implantação de Switch para transações financeiras ST (TIVIT) e SITEF (SoftwareExpress).</li>
-                            <li>Homologação e Implantação de GED - Digitalização distribuída nas lojas de documentos dos
+                            <li>Homologação e Implantação de Switch para transações financeiras ST (TIVIT) e SITEF
+                                (SoftwareExpress).</li>
+                            <li>Homologação e Implantação de GED - Digitalização distribuída nas lojas de documentos
+                                dos
                                 clientes para ceder crédito com segurança e menor fraude (AcessoDigital).</li>
-                            <li>Plataforma: Unix AIX/Banco Oracle 9i/10G, Oracle Forms e Reports 6i/10g/PL-SQL, Designer,
+                            <li>Plataforma: Unix AIX/Banco Oracle 9i/10G, Oracle Forms e Reports 6i/10g/PL-SQL,
+                                Designer,
                                 Microsoft Project.
                             </li>
                         </ol>
@@ -170,13 +185,16 @@
                         </header>
                         <ol>
                             <li>
-                                <i>Desenvolvimento, homologação e implantação de telas, relatórios e programas Oracle, análise
+                                <i>Desenvolvimento, homologação e implantação de telas, relatórios e programas Oracle,
+                                    análise
                                     de negócio e requisitos, solução de chamados/incidentes e implantação.</i>
                             </li>
-                            <li>Sistema de Billing com módulo de DETRAF e controle de fraudes, responsável por cobrar o uso
+                            <li>Sistema de Billing com módulo de DETRAF e controle de fraudes, responsável por cobrar o
+                                uso
                                 de rede entre prestadoras de Telefonia Fixa (STFC):</li>
                             <li>Contas a Pagar, Receber, CNAB, Faturamento e sistemas administrativos em geral.</li>
-                            <li>Análise e melhoria do processo e sistema para a gestão comercial por telefone (Telemarketing),
+                            <li>Análise e melhoria do processo e sistema para a gestão comercial por telefone
+                                (Telemarketing),
                                 controlando quantidade de chamadas/clientes, gerência dos vendedores e contratos.</li>
                             <li>Plataforma: Linux RedHat /Banco Oracle 9i, Oracle Developer 6i/PL-SQL, ERWIN.</li>
                         </ol>
@@ -192,14 +210,17 @@
                         </header>
                         <ol>
                             <li>
-                                <i> Desenvolvimento, homologação e implantação de telas, relatórios e programas Microsoft,
+                                <i> Desenvolvimento, homologação e implantação de telas, relatórios e programas
+                                    Microsoft,
                                     solução de chamados/incidentes e implantação.
                                 </i>
                             </li>
-                            <li>Sistema interno que é uma das soluções comercializadas desta empresa a clientes corporativos
+                            <li>Sistema interno que é uma das soluções comercializadas desta empresa a clientes
+                                corporativos
                                 para envio de alta quantidade de fax.</li>
                             <li>Sistema interno de contas a receber, emissão de notas fiscais.</li>
-                            <li>Plataforma: SQL Server 6.5 e aplicação Microsoft Visual Studio (Visual Basic 6), Crystal
+                            <li>Plataforma: SQL Server 6.5 e aplicação Microsoft Visual Studio (Visual Basic 6),
+                                Crystal
                                 Reports 6.
                             </li>
                         </ol>
@@ -253,13 +274,19 @@
                     <section>
                         <ol>
                             <li>
-                                <a target="_blank" href="https://github.com/jorgemnr/AspNetMvc/">Reservar Salão de Festas</a>
-                                - ASP.NET 4.7, MVC 5, Entity 6, SQL Server e .NET Framework 4 - out/2018 </li>                        
+                                <a target="_blank" href="https://github.com/jorgemnr/AspNetMvc/">Reservar Salão de
+                                    Festas</a>
+                                - ASP.NET 4.7, MVC 5, Entity 6, SQL Server e .NET Framework 4 - out/2018 </li>
                             <li>
-                                <a target="_blank" href="https://jorgemnr.github.io/literatura-cordel/">Literatura de Cordel</a>
+                                <a target="_blank" href="https://jorgemnr.github.io/PrevisaoClimaHG/">Previsão Climática</a>
+                                - HTML5, CSS3, Jquery, consumo de webservice HG Weather - out/2018 </li>
+                            <li>
+                                <a target="_blank" href="https://jorgemnr.github.io/literatura-cordel/">Literatura de
+                                    Cordel</a>
                                 - HTML5, CSS3, JavaScript Vanilla e Responsividade - ago/2018 </li>
                             <li>
-                                <a target="_blank" href="https://github.com/jorgemnr/WindowsService">Impressão Oracle Reports
+                                <a target="_blank" href="https://github.com/jorgemnr/WindowsService">Impressão Oracle
+                                    Reports
                                     Servidor
                                 </a>
                                 - C#, Serviço Windows - Jul/2018</li>
