--- a/index.html
+++ b/index.html
@@ -274,12 +274,13 @@
                     <section>
                         <ol>
                             <li>
+                                <a target="_blank" href="https://jorgemnr.github.io/previsao-climatempo/">Previsão
+                                    Climática</a>
+                                - HTML5, CSS3, Jquery, consumo de webservice ClimaTempo - nov/2018 </li>
+                            <li>
                                 <a target="_blank" href="https://github.com/jorgemnr/AspNetMvc/">Reservar Salão de
                                     Festas</a>
                                 - ASP.NET 4.7, MVC 5, Entity 6, SQL Server e .NET Framework 4 - out/2018 </li>
-                            <li>
-                                <a target="_blank" href="https://jorgemnr.github.io/PrevisaoClimaHG/">Previsão Climática</a>
-                                - HTML5, CSS3, Jquery, consumo de webservice HG Weather - out/2018 </li>
                             <li>
                                 <a target="_blank" href="https://jorgemnr.github.io/literatura-cordel/">Literatura de
                                     Cordel</a>
