--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>Analista Programador Oracle</p>
                     <p>Analista Funcional</p>
                     <br>
-                    <p>45 anos, Casado</p>
+                    <p>49 anos, Casado com filho 2 anos</p>
                 </section>
                 <section id="contatos">
                     <p>
